v4.1.7
- Optionally force a reconnection on wake

v4.1.6
- Avoid stopping local media when VPN changes

v4.1.5
- More debug to understand local media stopping playing when VPN changes

v4.1.4
- Quicker 10 second timeout for IP provider requests

v4.1.3
- Fix download but introduced in 4.1.2 for new installs/providers

v4.1.2
- Improved notification of new VPN provider files

v4.1.1
- Add BulletVPN

v4.1.0
- Add black.box
- Fix issue with verb setting being ignored in some UserDefined ovpns
- Improve detection of IP address by adding ipinfo.io
- Reconnect not happening after upgrade bug fixed

v4.0.9
- Fix XML

v4.0.8
- Add VanishedVPN and PrivateVPN

v4.0.7
- Allow import function to see root on Linux

v4.0.6
- Fix upgrade/non-display of locations bug

v4.0.5
- Fix initial platform checking broken in 4.0.4

v4.0.4
- Tracing and platform detection changes

v4.0.3
- Download percentage bar fix
- Try and avoid empty connection lists

v4.0.2
- Upgrade fix to stop connections needing to be revalidated following an update
- Fail over to next connection on first failure

v4.0.1
- Minor fixes and improvements in downloading from Github

v4.0.0
- Remove VPN files from addon (improving install speed massively)
- Allow VPN files to be updated and downloaded independently

v3.1.1
- ovpn generation bug fix

v3.1.0
- Close VPN connection on Kodi exit
- Modify internal Python API
- Tedious NordVPN updates

v3.0.0
- Introduce an internal Python API for third party use of filtering, etc

v2.8.0
- Added window ID filtering as an alternative to add-on filtering

v2.7.1
- Allow templates and ovpn files to be used in userdata directory

v2.7.0
- Protection for poorly set system clocks
- Add API support for pause, restart and cycle
- Delay start option

v2.6.2
- Update Perfect Privacy servers

v2.6.1
- Support for VPNSecure, adding key passwords
- Support for VPNArea

v2.6.0
- Switch connection views
- Added Linux only openvpn with no path option
- Added support for VPN.ac

v2.5.0