@@ -1,5 +1,6 @@
 v4.1.7
 - Optionally force a reconnection on wake
+- Add API to output current IP to home window
 
 v4.1.6
 - Avoid stopping local media when VPN changes
